Add home page and some work on about us

--- a/index.html
+++ b/index.html
@@ -38,9 +38,11 @@
     <link rel="stylesheet" href="css/bootstrap.css" />
   </head>
   <body>
+    <!-- home page  -->
+
     <div class="container">
       <div class="row">
-        <div class="col-lg-3">
+        <div class="col-lg-3" style="margin: 0; padding: 0">
           <aside class="aside-tag">
             <div class="aside-left-div-main">
               <div class="box-aside-img-div-top">
@@ -50,6 +52,9 @@
                 <h2>Abdul Rehman</h2>
                 <p>Web Developer</p>
               </div>
+
+              <!-- nav  -->
+
               <div class="nav-left-main-div">
                 <ol class="nav-ol-tag">
                   <li><a href="#" class="nav-link-tag">Home</a></li>
@@ -62,10 +67,89 @@
                   <li><a href="#" class="nav-link-tag">Contact</a></li>
                 </ol>
               </div>
+              <div class="aside-footer-div">
+                <p>© Copyright ©2023 All rights reserved |</p>
+                <span
+                  >This Portfolio is made by <br />
+                  <b style="cursor: pointer">Abdul Rehman</b></span
+                >
+              </div>
             </div>
           </aside>
         </div>
-        <div class="col-lg-9"></div>
+        <div class="col-lg-9" style="margin: 0; padding: 0">
+          <div class="slider-home-css-div">
+            <div class="images-home-div">
+              <img src="portfolio images website/img_bg_1.jpg.webp" alt="" />
+              <div class="home-content-div">
+                <h1>Hi!</h1>
+                <h2>
+                  I'am a <br />
+                  Web Developer
+                </h2>
+              </div>
+            </div>
+          </div>
+
+          <!-- about us  -->
+
+          <div class="about-us-top-content">
+            <h6>ABOUT US</h6>
+            <h5>WHO AM I?</h5>
+            <p>
+              Hi I'm <span style="font-weight: 900">Abdul Rehman</span> On her
+              way she met a copy. The copy warned the Little Blind Text, that
+              where it came from it would have been rewritten a thousand times
+              and everything that was left from its origin would be the word
+              "and" and the Little Blind Text should turn around and return to
+              its own, safe country.
+            </p>
+            <p>
+              Even the all-powerful Pointing has no control about the blind
+              texts it is an almost unorthographic life One day however a small
+              line of blind text by the name of Lorem Ipsum decided to leave for
+              the far World of Grammar.
+            </p>
+          </div>
+
+          <div class="boxes-about-us-flex-div">
+            <div class="col-lg-3">
+              <div class="boxes-about-us-content">
+                <div class="icon-about">
+                  <i class="fa-solid fa-shield-halved"></i>
+                </div>
+                <h2>
+                  Web <br />
+                  Development
+                </h2>
+              </div>
+            </div>
+            <div class="col-lg-3">
+              <div class="boxes-about-us-content">
+                <div class="icon-about">
+                  <i class="fa-solid fa-magnifying-glass"></i>
+                </div>
+                <h2>Ecommerece</h2>
+              </div>
+            </div>
+            <div class="col-lg-3">
+              <div class="boxes-about-us-content">
+                <div class="icon-about">
+                  <i class="fa-solid fa-code"></i>
+                </div>
+                <h2>Software</h2>
+              </div>
+            </div>
+            <div class="col-lg-3">
+              <div class="boxes-about-us-content">
+                <div class="icon-about">
+                  <i class="fa-solid fa-robot"></i>
+                </div>
+                <h2>Apps</h2>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </body>
