Add skills coding and service top heading

--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@
                   I'am a <br />
                   Web Developer
                 </h2>
+                <button>Read More</button>
               </div>
             </div>
           </div>
@@ -114,39 +115,55 @@
 
           <div class="boxes-about-us-flex-div">
             <div class="col-lg-3">
-              <div class="boxes-about-us-content">
-                <div class="icon-about">
-                  <i class="fa-solid fa-shield-halved"></i>
+              <div class="boxes-about-us-content icon-abt-01-box-brd">
+                <div class="icon-about icon-abt-01">
+                  <i class="fa-solid fa-shield-halved shield-icon"></i>
                 </div>
-                <h2>
-                  Web <br />
-                  Development
-                </h2>
+                <h2>Web Development</h2>
               </div>
             </div>
             <div class="col-lg-3">
-              <div class="boxes-about-us-content">
-                <div class="icon-about">
-                  <i class="fa-solid fa-magnifying-glass"></i>
+              <div class="boxes-about-us-content icon-abt-02-box-brd">
+                <div class="icon-about icon-abt-02">
+                  <i class="fa-solid fa-magnifying-glass search-icon"></i>
                 </div>
                 <h2>Ecommerece</h2>
               </div>
             </div>
             <div class="col-lg-3">
-              <div class="boxes-about-us-content">
-                <div class="icon-about">
-                  <i class="fa-solid fa-code"></i>
+              <div class="boxes-about-us-content icon-abt-03-box-brd">
+                <div class="icon-about icon-abt-03">
+                  <i class="fa-solid fa-code software-icon-code"></i>
                 </div>
                 <h2>Software</h2>
               </div>
             </div>
             <div class="col-lg-3">
-              <div class="boxes-about-us-content">
-                <div class="icon-about">
-                  <i class="fa-solid fa-robot"></i>
+              <div class="boxes-about-us-content icon-abt-04-box-brd">
+                <div class="icon-about icon-abt-04">
+                  <i class="fa-solid fa-robot app-icon-robot"></i>
                 </div>
                 <h2>Apps</h2>
               </div>
+            </div>
+          </div>
+
+          <div class="about-us-project-celebrate-main-div">
+            <h1>
+              I am happy to know you <br />
+              that Many projects done sucessfully!
+            </h1>
+          </div>
+
+          <!-- services  -->
+
+          <div class="services-main-div">
+            <div class="services-top-content-div">
+              <h6>WHAT I DO?</h6>
+              <h2>
+                HERE ARE SOME OF MY <br />
+                EXPERTISE
+              </h2>
             </div>
           </div>
         </div>
