Add work Cards services

--- a/index.html
+++ b/index.html
@@ -165,6 +165,98 @@
                 EXPERTISE
               </h2>
             </div>
+            <div class="boxes-serives-flex-div">
+              <div class="col-lg-4">
+                <div class="box-service-div">
+                  <div class="icon-service-div icon-service-div-bgclr-01">
+                    <i class="fa-regular fa-lightbulb"></i>
+                  </div>
+                  <div class="box-services-content-div">
+                    <h2>Web Development</h2>
+                    <p>
+                      Whether you need a new web app, an e-commerce solution, or
+                      a back-office system, we’ve got you covered. Improve your
+                      business processes and increase profits through strategic
+                      web software development.
+                    </p>
+                    <ol>
+                      <li>
+                        <i class="fa-solid fa-circle-check"></i>
+                        HTML/CSS/JAVASCRIPT
+                      </li>
+                      <li>
+                        <i class="fa-solid fa-circle-check"></i>
+                        Bootstrap/UX-UI/SEO
+                      </li>
+                      <li>
+                        <i class="fa-solid fa-circle-check"></i>
+                        PHP/JSON/SQL
+                      </li>
+                    </ol>
+                  </div>
+                </div>
+              </div>
+              <div class="col-lg-4">
+                <div class="box-service-div">
+                  <div class="icon-service-div icon-service-div-bgclr-02">
+                    <i class="fa-regular fa-lightbulb"></i>
+                  </div>
+                  <div class="box-services-content-div">
+                    <h2>App Development</h2>
+                    <p>
+                      Our mobile app solutions are solving problems and
+                      improving lives for millions of users across different
+                      industries: Finance, Entertainment, Education, Mass Media,
+                      Construction, IoT and more.
+                    </p>
+                    <ol>
+                      <li>
+                        <i class="fa-solid fa-circle-check"></i>
+                        Android App
+                      </li>
+                      <li>
+                        <i class="fa-solid fa-circle-check"></i>
+                        iPhone App
+                      </li>
+                      <li>
+                        <i class="fa-solid fa-circle-check"></i>
+                        Hybrid App
+                      </li>
+                    </ol>
+                  </div>
+                </div>
+              </div>
+              <div class="col-lg-4">
+                <div class="box-service-div">
+                  <div class="icon-service-div icon-service-div-bgclr-03">
+                    <i class="fa-regular fa-lightbulb"></i>
+                  </div>
+                  <div class="box-services-content-div">
+                    <h2>Ecommerce Development</h2>
+                    <p>
+                      A full-funnel marketing approach allows our team to work
+                      across the entire customer journey and create solutions
+                      for the fundamental needs to scale new customer
+                      acquisition and retention for e-commerce brands.
+                    </p>
+                    <ol>
+                      <li>
+                        <i class="fa-solid fa-circle-check"></i>
+                        Video Advertising
+                      </li>
+                      <li>
+                        <i class="fa-solid fa-circle-check"></i>
+                        BigCommerce
+                      </li>
+                      <li>
+                        <i class="fa-solid fa-circle-check"></i>
+                        Mobile Advertising
+                      </li>
+                    </ol>
+                  </div>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </div>
