Added bg image counting and work on it javascript counter numbering

--- a/index.html
+++ b/index.html
@@ -258,8 +258,37 @@
               </div>
             </div>
           </div>
+
+          <!-- cover  counter  bg -->
+
+          <div class="col-lg-9">
+            <div class="bg-image-div-main-counting">
+              <div class="cover-bg-img-couting-div">
+                <div class="counting-content-div">
+                  <div class="counting-box-main-div">
+                    <i class="fa-solid fa-circle-check"></i>
+                    <span class="num-counting-span-1" data-val="200">000</span>
+                    <span class="num-counting-span-2">Couting</span>
+                  </div>
+                  <div class="counting-box-main-div">
+                    <i class="fa-solid fa-circle-check"></i>
+                    <span class="num-counting-span-1" data-val="200">000</span>
+                    <span class="num-counting-span-2">Couting</span>
+                  </div>
+                  <div class="counting-box-main-div">
+                    <i class="fa-solid fa-circle-check"></i>
+                    <span class="num-counting-span-1" data-val="200">000</span>
+                    <span class="num-counting-span-2">Couting</span>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </div>
+
+    <!-- javascript  -->
+    <script src="javascriptWeb.js"></script>
   </body>
 </html>
