work on responsiveness navbar header to services cards

--- a/index.html
+++ b/index.html
@@ -76,6 +76,10 @@
               </div>
             </div>
           </aside>
+          <div class="icon-res-div" onclick="resNav()">
+            <i class="fa-solid fa-bars menuNav" id="menuResicon"></i>
+            <i class="fa-solid fa-xmark closeNav" id="closeResicon"></i>
+          </div>
         </div>
         <div class="col-lg-9" style="margin: 0; padding: 0">
           <div class="slider-home-css-div">
@@ -266,19 +270,19 @@
               <div class="cover-bg-img-couting-div">
                 <div class="counting-content-div">
                   <div class="counting-box-main-div">
-                    <i class="fa-solid fa-circle-check"></i>
-                    <span class="num-counting-span-1" data-val="200">000</span>
-                    <span class="num-counting-span-2">Couting</span>
+                    <i class="fa-solid fa-users"></i>
+                    <span class="num-counting-span-1" data-val="12">12</span>
+                    <span class="num-counting-span-2">Hard Workers </span>
                   </div>
                   <div class="counting-box-main-div">
                     <i class="fa-solid fa-circle-check"></i>
-                    <span class="num-counting-span-1" data-val="200">000</span>
-                    <span class="num-counting-span-2">Couting</span>
+                    <span class="num-counting-span-1" data-val="64">64</span>
+                    <span class="num-counting-span-2">Project</span>
                   </div>
                   <div class="counting-box-main-div">
-                    <i class="fa-solid fa-circle-check"></i>
-                    <span class="num-counting-span-1" data-val="200">000</span>
-                    <span class="num-counting-span-2">Couting</span>
+                    <i class="fa-solid fa-users"></i>
+                    <span class="num-counting-span-1" data-val="20">20</span>
+                    <span class="num-counting-span-2">Client</span>
                   </div>
                 </div>
               </div>
@@ -287,6 +291,12 @@
         </div>
       </div>
     </div>
+
+    <!-- jquery cdn  -->
+    <script src="jquery.js"></script>
+
+    <!-- jquery work  -->
+    <script src="jquery work.js"></script>
 
     <!-- javascript  -->
     <script src="javascriptWeb.js"></script>
