--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
                       </li>
                       <li>
                         <i class="fa-solid fa-circle-check"></i>
-                        PHP/JSON/SQL
+                        PHP/Laravel/SQL
                       </li>
                     </ol>
                   </div>
@@ -203,7 +203,7 @@
               <div class="col-lg-4">
                 <div class="box-service-div">
                   <div class="icon-service-div icon-service-div-bgclr-02">
-                    <i class="fa-regular fa-lightbulb"></i>
+                    <i class="fa-solid fa-mobile-screen-button"></i>
                   </div>
                   <div class="box-services-content-div">
                     <h2>App Development</h2>
@@ -233,7 +233,7 @@
               <div class="col-lg-4">
                 <div class="box-service-div">
                   <div class="icon-service-div icon-service-div-bgclr-03">
-                    <i class="fa-regular fa-lightbulb"></i>
+                    <i class="fa-solid fa-users"></i>
                   </div>
                   <div class="box-services-content-div">
                     <h2>Ecommerce Development</h2>
@@ -280,11 +280,73 @@
                     <span class="num-counting-span-2">Project</span>
                   </div>
                   <div class="counting-box-main-div">
-                    <i class="fa-solid fa-users"></i>
+                    <i class="fa-solid fa-user"></i>
                     <span class="num-counting-span-1" data-val="20">20</span>
                     <span class="num-counting-span-2">Client</span>
                   </div>
                 </div>
+              </div>
+            </div>
+          </div>
+
+          <!-- skilss  -->
+          <div class="col-lg-12">
+            <div class="skilss-top-content">
+              <h6>MY SPECIALTY</h6>
+              <h2>My Skills</h2>
+            </div>
+            <div class="skills-div-main-content">
+              <p>
+                The Big Oxmox advised her not to do so, because there were
+                thousands of bad Commas, wild Question Marks and devious
+                Semikoli, but the Little Blind Text didn’t listen. She packed
+                her seven versalia, put her initial into the belt and made
+                herself on the way.
+              </p>
+              <div class="slills-div-main-content01">
+                <li>
+                  <h2>HTML5</h2>
+                  <span class="bar">
+                    <span class="html"></span>
+                  </span>
+                </li>
+
+                <li>
+                  <h2>CSS3</h2>
+                  <span class="bar">
+                    <span class="css"></span>
+                  </span>
+                </li>
+
+                <li>
+                  <h2>JAVASCRIPT</h2>
+                  <span class="bar">
+                    <span class="js"></span>
+                  </span>
+                </li>
+              </div>
+
+              <div class="slills-div-main-content02">
+                <li>
+                  <h2>PHP</h2>
+                  <span class="bar">
+                    <span class="php"></span>
+                  </span>
+                </li>
+
+                <li>
+                  <h2>SEO</h2>
+                  <span class="bar">
+                    <span class="seo"></span>
+                  </span>
+                </li>
+
+                <li>
+                  <h2>SQL</h2>
+                  <span class="bar">
+                    <span class="sql"></span>
+                  </span>
+                </li>
               </div>
             </div>
           </div>
